@@ -24,6 +24,7 @@ Version 0.6.0~dev
 	* Remove sleep based loop in Action._execute_worker, closes: #5759.
 	* Support gxf muxing in ffmpeg worker.
 	* Handle progress in ommcp worker, closes: #5913.
+	* Support source track selection in ommcp worker.
 
 Version 0.5.0 Released on 2012/03/29
 
